<resources>
    <string name="app_name">Memory_Jaunault_Paris</string>
    <string name="nombre_de_cartes">Nombre de paires :</string>
    <string name="choisis_le_dos_des_cartes">Choisis le dos des cartes :</string>
    <string name="choisis_le_th_me_des_cartes">Choisis le thème des cartes :</string>
    <string name="ecris_ton_nom_ici">Ecris ton nom ici</string>
    <string name="valider">Valider</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mode_de_jeu">Mode de jeu :</string>
    <string name="zen">Zen</string>
    <string name="normal">Normal</string>
    <string name="contre_la_montre">Contre-la-montre</string>
    <string name="place">Place</string>
    <string name="nom">Nom</string>
    <string name="temps">Temps</string>
    <string name="nombre_de_coups">Nombre de coups</string>
</resources>
